<resources>
    <string name="app_name">TempConverter</string>
    <string name="action_settings">Settings</string>

    <string name="convert_header">Convert:</string>
    <string name="from_header">From</string>
    <string name="to_header">To</string>
    <string name="celsius_radio">Celsius</string>
    <string name="fahrenheit_radio">Fahrenheit</string>
    <string name="kelvin_radio">Kelvin</string>
    <string name="rankine_radio">Rankine</string>
    <string name="convert_button">CONVERT</string>

</resources>
