<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".TemperatureConverter">

        <TextView
            android:text="@string/convert_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60px"/>

        <EditText
            android:id="@+id/user_input"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="300px"
            android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/from_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60px"/>

            <RadioGroup
                android:id="@+id/from_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/from_celsius"
                    android:text="@string/celsius_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60px"/>
                <RadioButton
                    android:id="@+id/from_fahrenheit"
                    android:text="@string/fahrenheit_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60px"/>
                <RadioButton
                    android:id="@+id/from_kelvin"
                    android:text="@string/kelvin_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60px"/>
                <RadioButton
                    android:id="@+id/from_rankine"
                    android:text="@string/rankine_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60px"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/to_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60px"/>

            <RadioGroup
                android:id="@+id/to_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/to_celsius"
                    android:text="@string/celsius_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60px"/>
                <RadioButton
                    android:id="@+id/to_fahrenheit"
                    android:text="@string/fahrenheit_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60px"/>
                <RadioButton
                    android:id="@+id/to_kelvin"
                    android:text="@string/kelvin_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60px"/>
                <RadioButton
                    android:id="@+id/to_rankine"
                    android:text="@string/rankine_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60px"/>
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/convert_button"
        android:text="@string/convert_button"
        android:layout_width="fill_parent"
        android:layout_height="200px"
        android:textSize="60px"/>

    <TextView
        android:id="@+id/conversion_text"
        android:text=""
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="30px"
        android:textSize="80px"/>

    <TextView
        android:id="@+id/formula_text"
        android:text=""
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="24px"
        android:textSize="40px"/>

</LinearLayout>
